# lyonflowfull

./: .deploy.env.example  .dockerignore  .editorconfig  .env.demo  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .mailmap  AGENTS 2.md  AGENTS.md  AUDIT_DASHBOARDS_2026-06-16.md  AUDIT_DASHBOARD_BUGS.md  AUDIT_FIXES_RECAP.md  AUDIT_INTEGRATION_LIVE.md  AUDIT_P0_PLAN.md  AUDIT_P1_PLAN.md  AUDIT_P2_PLAN.md  AUDIT_P3_P4_PLAN.md  AUDIT_PRE_PROD_FINAL.md  AUDIT_PRO_TCL_FIXES.md  AUDIT_USAGER_FIXES.md  AUDIT_VPS_PERFS_RAPPORT.md  AUDIT_VPS_RAPPORT_FINAL.md  AUDIT_VPS_backup-recovery.md  AUDIT_VPS_code-quality.md  AUDIT_VPS_infra.md  CHANGELOG 2.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.airflow  Dockerfile.gnn-training  Dockerfile.mlflow  INVENTAIRE_WIDGETS_2026-06-23.md  LICENSE  Makefile  NOTICE  OPERATIONS_FINALES.md  (+34 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci 2.yml  ci.yml  k8s-images.yml
.streamlit/: config.toml
alembic/: __init__.py  env.py
alembic/versions/: 0001_initial.py  0002_perf_optimizations.py  0002_trafic_predictions_indexes.py  0003_velov_features_table.py  0004_app_users_table.py  0005_gold_bottleneck_tables.py  0006_referentiel_and_mvs.py  0007_gold_views_and_history.py  0008_mv_otp_heatmap_cleanup.py  0009_rgpd_tables.py  0010_referentiel_v_cadence_summary.py
archive/: README.md
archive/analysis/: INVENTAIRE_WIDGETS_CALCULS_2026-06-23.md
archive/audits/: AUDIT_DB_2026-06-30.md  AUDIT_PROJET_2026-06-30.md  AUDIT_VPS_doc-isolation.md  AUDIT_VPS_securite.md  DIAGNOSTIC_VPS_DASHBOARD.md  RAPPORT_VPS_2026-06-22.md
archive/dags_disabled/: dag_live_speed_retrain_disabled.py
archive/misc/: AUDIT_PIPELINE_DATA_2026-06-20.docx  B4_CANCELLED.md  PLAN_NO_MOCK_VPS.md  PROJECT_STATUS_AND_GOALS.md
archive/scripts/: fix_freshness_badge_imports.py  fix_pages_imports.py  migrate_folium_to_a11y.py  migrate_loading_states_v3.py
archive/sprints/: B4_BACKUP_OFFSITE_PROGRESS_2026-06-22.md  BUGS_PRO_TCL_VPS_2026-06-19.md  SPEC_COMPARATEUR_MODES_USAGER.md  SPEC_FIX_ELU2_BOTTLENECKS.md  SPEC_SPRINT_16.md  SPRINT_11_REPORT.md  SPRINT_17_REPORT.md  SPRINT_1_TO_4_REPORT.md  SPRINT_9_OPTIMISATIONS.md  SPRINT_VPS-6_REPORT.md  TODO_PRO_TCL_FIXES.md
archive/widgets_dead/: report_builder.py
cloud-demo/: README.md
cloud-demo/docs/: DEMO_SCRIPT.md  SOUTENANCE_RNCP_38777.md
cloud-demo/scripts/: seed-demo-data.sh  spin-up.sh  tear-down.sh
cloud-demo/terraform/: main.tf  outputs.tf  variables.tf
config/: personas.yaml
dags/: __init__.py  dag_refresh_road_network.py
dags/_archive/: .airflowignore  __init__.py  _disabled_dag_live_speed_retrain.py  legacy_dag_pipeline.py
dags/bronze/: collect_bronze.py  collect_calendriers_monthly.py  collect_tomtom_traffic.py  collect_vigilance_meteo.py
dags/legacy_github/: .airflowignore  dag_pipeline.py
dags/maintenance/: backfill_dim_spatial_lat_lon 3.py  backfill_dim_spatial_lat_lon.py  critical_pipeline_health.py  maintenance.py  record_network_health.py  refresh_congestion_propagation.py  refresh_lieux_calendrier.py  refresh_meteo_impact.py  refresh_osm_traffic_costs.py  refresh_sensor_saturation.py  refresh_velov_transit_coupling.py  silver_archive_to_minio.py
dags/ml/: .airflowignore  README.md  _disabled_dag_live_speed_retrain.py  build_xgb_training_set.py  dag_daily_speed_train.py  dag_inference_velov.py  dag_inference_xgboost.py  dag_live_speed_retrain.py  daily_drift_report.py  refresh_xgb_vs_tomtom.py  retrain_gnn.py  retrain_xgboost.py
dags/transforms/: build_spatial_mapping.py  refresh_heavy_mv.py  transform_bronze_to_silver.py  transform_silver_to_gold.py
dashboard/: Accueil.py  __init__.py
dashboard/components/: __init__.py  a11y.py  auto_refresh.py  colors.py  data_cache.py  data_status.py  deferred_widget.py  (+10 more)
deploy/: init-db 2.sql  init-db.sql
docs/: API.md  ARCHITECTURE.md  AUDIT_AIRFLOW_POSTGRES_SPRINT24.md  AUDIT_CERTIFICATION_2026-07-01.md  AUDIT_DASHBOARD_SPRINT15.md  AUDIT_PIPELINE_2026-06-12.md  CLOUD_DEPLOY_OPTIONS.md  CONTROLE_VPS_VS_CLOUD_DEMO.md  DAGs_DOCUMENTATION.md  DASHBOARD_PAGES.md  DATA_GOVERNANCE.md  DEPLOYMENT.md  DICTIONNAIRE_COLONNES.md  EC2_TRAINING_GUIDE.md  GIT_STRUCTURE.md  INVENTAIRE_WIDGETS_2026-06-23.md  K8S_MIGRATION_PLAN.md  MODIFICATIONS_IA_SPRINT22.md  MONITORING 2.md  MONITORING.md  NEXT_STEPS_PGROUTING.md  PIPELINE_AUDIT_AND_PLAN.md  PLAN_NO_MOCK_VPS.md  POSTGRES_DATABASE_REFERENCE.md  POSTGRES_TUNING_PROD.md  PROJECT_STATUS_AND_GOALS 2.md  PROJECT_STATUS_AND_GOALS.md  REPO_STRUCTURE.md  ROUTING_FIX_STATUS.md  RUNBOOK.md  SPEC_APPLY_MIGRATIONS.md  SPEC_COMPARATEUR_MODES_USAGER.md  SPEC_EVIDENTLY_CONFIGURATION.md  SPEC_OPTIMISATION_INTERDEPENDANCES.md  SPEC_PGROUTING_INTEGRATION.md  SPEC_SPRINT_16.md  SPEC_SPRINT_20_UX.md  SPEC_SPRINT_21.md  SPRINT_19_PLAN.md  SPRINT_21_REPORT.md  (+5 more)
kubernetes/: README.md
nginx/: nginx.conf  ssl.conf
présentation/: DOCUMENTATION_BLOC4_LyonFlow.docx  LyonFlow_Bloc4_Soutenance_v2.pptx  README.md  soutenance-bloc4.html
scripts/: airflow-entrypoint.sh  apply-migrations.sh  audit-vps-predeploy.sh  backup-offsite.sh  backup.sh  check-deploy-env 2.sh  check-deploy-env.sh  cleanup-vps-sda1.sh  coherence-check.sh  deploy-sprint24.sh  diagnose-tcl.sh  export_gnn_data.py  fix_freshness_badge_imports.py  fix_pages_imports.py  fix_pages_imports_v2.py  generate-self-signed-cert.sh  healthcheck-gold-stale.sh  healthcheck-vps.sh  import_osm_lyon.sh  migrate-postgres-to-sdb.sh  migrate_error_display.py  migrate_font_size_to_lyf.py  migrate_freshness_badge.py  migrate_loading_states.py  migrate_loading_states_v3.py  migrate_plotly_to_a11y.py  migrate_realign_v0.3.1.sql  mlflow_delete_velov_h60.py  osm2pgrouting_mapconfig.xml  pg-audit.sh  pre-commit-hook  rclone-setup.sh  restore.sh  scrub_secrets.py  seed_lieux_calendrier.py  seed_users.py  smoke_test_vps6.py  train_gnn_ovh.sh  train_gnn_remote.py
src/: __init__.py  config.py  minio_s3v4_upload.py
tests/: __init__.py  conftest.py  test_apply_migrations.sh
training/: __init__.py
(+407 files in other folders)
